test_scripts/errors/while_body_error.shm
while true { undefined_var; }
