test_scripts/errors/while_body_error.stderr
 1 | while true { undefined_var; }
                  ^^^^^^^^^^^^^
Error: Unknown identifier "undefined_var"
